Fix layout and animation for خدماتنا section; adjusted CSS for proper spacing and movement

--- a/css/component.css
+++ b/css/component.css
@@ -360,7 +360,7 @@ p {
 }
 
 .visit-btn .btn-default {
-  font-family: Arial, Helvetica, sans-serif !important;
+  font-family: "Rubik",Arial, Helvetica, sans-serif !important;
   border-radius: 0px;
   padding: 14px 36px;
   border: 2px #04151f solid;
@@ -1698,7 +1698,7 @@ section.bl-expand .bl-icon-close {
 }
 .default-setting {
   letter-spacing: 0pt;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Rubik" ,Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 
@@ -1750,6 +1750,8 @@ section.bl-expand .bl-icon-close {
 .ah-words-wrapper {
   display: inline-block; /* اجعل العناصر تظهر في سطر منفصل */
   white-space: nowrap; /* منع التفاف النصوص */
+  margin: 0;
+  padding: 0;
 }
 
 /* تنسيق العناصر داخل .ah-words-wrapper */
